--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.Base">
-        <activity android:name="com.flaringapp.coursework2021.presentation.main.MainActivity">
+        <activity android:name="com.flaringapp.coursework2021.presentation.features.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
