--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.Base">
+        android:theme="@style/Theme.Coursework">
+
         <activity android:name="com.flaringapp.coursework2021.presentation.features.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
