Add login screen and profile logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".presentation.features.login.LoginActivity"
+            android:theme="@style/Theme.Coursework" />
+
     </application>
 
 </manifest>
